--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.reassembler</groupId>
-  <artifactId>jarfish</artifactId>
-  <version>1.0-rc6</version>
+  <artifactId>scanfish</artifactId>
+  <version>1.0-b</version>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -21,7 +21,7 @@
             <configuration>
                 <archive>
                     <manifest>
-                        <mainClass>org.reassembler.jarfish.JarFish</mainClass>
+                        <mainClass>org.reassembler.classfish.ScanFish</mainClass>
                     </manifest>
                 </archive>
             </configuration>
